--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "vite-plugin-import-transform",
   "version": "0.0.3",
+  "private": true,
   "scripts": {
     "build": "tsc",
     "postbuild": "node ./scripts/postbuild.cjs"
   },
+  "type": "module",
   "files": [
     "**"
   ],
